<resources>
    <string name="app_name">duds</string>
    <string name="action_settings">Settings</string>
    <string name="upload_image">Image</string>
    <string name="upload_photo">Photo</string>

    <string name="menu_box_view">Clothes</string>

    <string name="menu_toolbar_settings">Settings</string>
    <string name="title_language">Language</string>
    <string name="key_language">key_language</string>
    <string name="summary_language">Specify language</string>
    <string name="clear_cache">Clear cache</string>

    <string name="box_image_button">Box Image</string>
    <string name="similar_image_button">Similar Image</string>
    <string name="startup_button_about">About</string>
    <string name="startup_button_share">Share</string>
    <string name="startup_button_settings">Settings</string>
    <string name="startup_button_photo">Make photo</string>
    <string name="startup_button_picture">Upload picture</string>
    <string name="startup_button_feedback">Send feedback</string>

    <string name="not_found">Not Found</string>
    <string name="about_text">Application DUDS allow you to find similar clothes in online shops</string>
    <string name="feedback_title_text">Enter feedback</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_send_success">Success</string>

    <string name="share_application_header">Choose one</string>
    <string name="share_application_text">Let me recommend you this application</string>

    <string name="dialog_upload_search_similar">Search similar objects</string>
    <string name="dialog_upload_search_box">Search objects</string>

    <string name="helper_upload_image_button_text">Here you can select an image. Click once.</string>
    <string name="helper_upload_image_button_send_text">Double click to search parts.</string>
</resources>
