<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startup_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startup_background"
    android:gravity="bottom|center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/startup_buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical">

    <Button
        android:id="@+id/startup_button_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/startup_button_picture" />

    <Button
        android:id="@+id/startup_button_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/startup_button_photo" />

    <Button
        android:id="@+id/startup_button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/startup_button_settings" />

    <Button
        android:id="@+id/startup_button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:text="@string/startup_button_share" />

    <Button
        android:id="@+id/startup_button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/startup_button_about" />
    </LinearLayout>
</LinearLayout>
